fix: responsive on mobile

--- a/client/src/components/Forum.css
+++ b/client/src/components/Forum.css
@@ -9,7 +9,6 @@
   background-color: white;
   border: 1px solid white;
   border-radius: 5px;
-  width: 700px;
   margin-bottom: 20px;
 }
 
