--- a/client/src/components/QuillEditor.css
+++ b/client/src/components/QuillEditor.css
@@ -3,7 +3,6 @@
   color: black;
   flex-direction: column;
   padding: 5px;
-  width: 600px;
   height: 350px;
   display: flex;
   flex-direction: column;
