--- a/client/src/components/Thread.css
+++ b/client/src/components/Thread.css
@@ -2,7 +2,6 @@
   background-color: #e5f1f9;
   border: 1px solid white;
   border-radius: 5px;
-  width: 700px;
 }
 
 .thread-content {
